# charm

./: CHANGELOG.md  Dockerfile  TODO.txt  assembler.sh  charm.cabal  compiler.sh  lol  make.sh  return_42.s  run.sh  runme.arm64  test_arm.s
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ext/: example_arm64  run_arm.sh
ext/bare_metal/: syscalls.c
src/: assembler.sh  compile_arm.sh  compiler.sh  return_hex.c  return_oct.c
src/bare_metal/: linker_script.ld
test/: Spec.hs
