cabal-version:      2.4
name:               charm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             rodfer0x80
maintainer:         rodrigolf080@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable charm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.15.1.0,
                      directory >= 1.3.6 && < 1.4,
                      mtl >= 2.2.2, 
                      parsec >= 3.1.14,
                      text >= 1.2.5.0,
                      megaparsec >= 9.5.0,
                      filepath >= 1.4.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -dynamic
